Layout Issues Done

--- a/src/index.css
+++ b/src/index.css
@@ -267,6 +267,8 @@ body{
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);  
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 
 .display-block {
